--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:fullBackupContent="true"
+        android:name=".other.App"
         android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".view.activities.MainActivity">
             <intent-filter>
