--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
-        versionName "0.1"
+        versionName "1.0"
     }
     buildTypes {
         release {
@@ -45,4 +45,8 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.google.guava:guava:16.0.1'
+
+    testApt 'com.google.dagger:dagger-compiler:2.0.2'
+    testCompile 'com.squareup.okhttp3:mockwebserver:3.4.1'
+    testCompile 'junit:junit:4.12'
 }
