--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     compile 'com.google.guava:guava:16.0.1'
 
     testApt 'com.google.dagger:dagger-compiler:2.0.2'
+    testCompile 'org.robolectric:robolectric:3.0'
     testCompile 'com.squareup.okhttp3:mockwebserver:3.4.1'
+    testCompile "org.mockito:mockito-core:1.10.19"
     testCompile 'junit:junit:4.12'
 }
