--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,4 +99,5 @@ dependencies {
     testCompile 'com.squareup.okhttp3:mockwebserver:3.4.1'
     testCompile "org.mockito:mockito-core:1.10.19"
     testCompile 'junit:junit:4.12'
+    testCompile 'org.khronos:opengl-api:gl1.1-android-2.1_r1'
 }
